Scene controller added and scenestructure fixed